--- a/assets/style.css
+++ b/assets/style.css
@@ -2,263 +2,166 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: arial, sans-serif;
 }
-
-:root{
-    --background: blueviolet;
-    --name: firebrick;
-    --Font:, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    --bold:bold;
+html {
+    scroll-behavior: smooth;
 }
-body{
-    background-color: aquamarine;
-}
-
-
-.navbar{
-    display: flex;
-    justify-content:flex-end ;
-    align-items:center ;
-    background-color:darkgrey;
-     position:relative;
-}
-
-.navbar ul{
-    display: flex;
-    list-style: none;
-    margin: 35px 0px;
-}
-
-.navbar ul li{
-    font-family:var(--Font);
-    font-weight: var(--bold);
-    font-size: 120%;
-
-}
-
-.navbar ul li a{
-    text-decoration: none;
-    color:  firebrick;
-    padding: 10px 30px;
-    
-}
-
-.navbar ul li a:hover{
-    background-color:pink;
-    color: cornflowerblue;
-    box-shadow: 0 0 10px white;
-}
-
-.home{
-    display: flex;
-    flex-direction: column;
-    background-color: var(--background) (0,0,0,0.5);
-    height: 950px;
-    justify-content: center;
-    align-items: center;
-    color:var(--name);
-    font-size: 35px;
-}
-
-
-.main{
-    display: flex;
-    flex-direction:column;
-    border: 1px solid var(--name) ;
-    align-items: center;
-    position: absolute;
-    top: 20%;
-    right: 45%;
-    border: none;
-}
-
-.main img{
-    position: absolute;
-    top: -90px;
-    right: 0px;
-    width: 300%;
-    
-}
-
-.heading{
-    font-family: var(--Font);
-    font-size: 60px;
+h1 {
+    min-width: calc(50% - 10px);
+    margin-right: 10px;
     text-align: center;
-    margin: 40px 10px;
-    border: none;
-    margin-left: 200%;
-    display: inline-block;
-    clear: both;
-    overflow: hidden;
-    white-space: nowrap;
+    font-size: 3em;
+    border: 2px solid black;
 }
-
-
-
-.Click{
-    padding: 9px 35px;
-    background-color: transparent;
-    border: 1px solid darkslateblue;
-    color: var(--name);
-    outline: none;
-    transition: ease;
-    font-weight:var(--bold);
-    font-size: 20px;
+h2{
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    background: black;
+    color: white;
+    min-width: 100%;
+    text-align: center;
+    font-size: 1.5em;
+    padding: 10px 0;
 }
-.Click:hover{
-    cursor: pointer;
-    background-color: var(--name);
-    color: black;
-    box-shadow: 0 0 8px black;
-    font-weight: var(--bold);
-}
-
-
-
-.me{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 75%;
-    bottom: 50%;
-    font-size: 300%;
-    color: var(--name);
-    height: 70%;
-    z-index: 100;
+footer {
     width: 100%;
-    position:absolute;
-}
-
-#about{
+    height: 40px;
+    background: #050505;
+    color: white;
     display: flex;
-    flex-direction: column;
-    padding: 50px;
-    margin-bottom: 80px; ;
-}
-
-.pic {
-    display: flex;
-    width: 600;
-    height: 600px;
-
-}
-.intro{
-    display: flex;
-    flex-direction: column;
-    text-align:justify;
-    padding: 20px;
-    background-color: burlywood;
-}
-
-.par{
-    font-size:300%;
-    margin-bottom: 80px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-left: 6%;
-    text-align: left;
-    
-}
-
-.pits img {
-    width: 120%;
-    margin-left: -500px;
-
-}
-@media screen and (max-width: 768px){
-    .pits img {
-        width: 120%;
-        margin-left: -0;
-
-    }
-    .main{
-        margin-right: 200px;
-    }
-}
-.work{
-    color: var(--name);
-    text-align: center;
-
-}
-
-.works{
-    font-size: 300%;
-    color: var(--name);
-    margin-bottom: 20px;
-
-}
-
-.pro img{
-    width: 600px;
-    height: 400px;
-    transition: trabsform 800ms cubic-bezier(.5,0,.5,1), opacity 250m linear;
-}
-.pro img:hover{
-    transform: scale(1.3);
-    opacity: 0.7;
-    border-radius: 40px;
-}
-
-.pro{
-    display: grid;
-    grid-template-columns: repeat(3,1fr)
-}
-
-
-
-.contact{
     justify-content: center;
-    text-align: center;
-    font-size: 300%;
-    color: var(--name);
-    margin-bottom: 20px;
-
+    align-items: center;
 }
-
-#contacts img{
-    width: 2%;
-    
+footer > a{
+    text-decoration: none;
+    color: inherit;
+    font-size: 20px;
+    padding: 0 30px;
+    transition: color 0.5s;
 }
-
-#contacts:hover{
-    transform: scale(1.3);
-    opacity: 0.7;
-    border-radius: 40px;
-    grid-template-columns: repeat(3,1fr);
+footer > a:hover{
+    color: #ffae00;
 }
-
-.footer{
+nav {
+    width: 100%;
+    height: 40px;
+    background: #050505;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+nav > ul {
+    margin: 0 auto;
+    width: 50vw;
+    list-style-type: none;
     display: flex;
-    justify-content:flex-end ;
-    align-items:center ;
-    font-size: larger;
-    color: var(--name);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    align-items: center;
+    justify-content: center;
+}
+nav > ul > li {
+    padding: 11px;
+    text-align: center;
+    width: 100%;
+    transition: background 0.5s;
+}
+nav > ul > li:hover{
+    background: #ffae00;
+}
+nav > ul > li > a{
+    text-decoration: none;
+    color: inherit;
+}
+section {
+    margin: 10px auto;
+    width: 65vw;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+section > img {
+    max-width: 50%;
+}
+/* INTRODUCTION */
+.intro {
+    max-width: 50%;
+    padding-left: 10px;
+}
+/* ABOUT ME */
+.par {
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+/* MY WORK */
+.pro {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.pro > div {
+    width: 57.4%;
+    text-align: right;
+}
+.pro > div:nth-child(1) {
+    width: 42.6%;
+    text-align: left;
+}
+.pro > div > a > img{
+    width: 97%;
+    filter: grayscale(100%);
+    transition: filter 800ms cubic-bezier(.5,0,.5,1);
+}
+.pro > div > a > img:hover{
+    filter: grayscale(0%);
+}
+/* CONTACT */
+#contacts > a {
+    padding: 0 10px;
+    border-right: 2px solid black;
+    display: inline-block;
+}
+#contacts > a:nth-child(3) {
+    border-right: 0;
+}
+.icon > img{
+    filter: invert(1) sepia(1) saturate(5) brightness(1) contrast(0) hue-rotate(135deg);
+    width: 50px;
+    transition: width 0.5s;
+}
+.icon > img:hover{
+    filter: invert(1) sepia(0.5) saturate(6) brightness(.55) contrast(8) hue-rotate(340deg);
+}
+#contacts:hover > .icon > img{
+    width: 55px;
+}
+/* MEDIA QUERIES */
+@media screen and (max-width: 1054px) {
+    section {
+        width: 90vw;
+   }
+    nav > ul {
+        width: 75vw;
+   }
 }
 
-@media screen and (min-width: 768px) {
-
-    .par,.pics{
-        flex: 0 0 50%;
-        width: 50%;
-    }
-    .pit{
-        flex: 0 0 50%;
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .pro{
-        display: block;
-    }
-    .par,.pics{
-        flex: 0 0 50%;
-        width: 50%;
-    }
-    .pit{
-        flex: 0 0 50%;
-        width: 50%;
-    }
-
-    
+@media screen and (max-width: 760px) {
+    section {
+        width: 95vw;
+   }
+    h1{
+        font-size: 5vw;
+   }
+    h2{
+        font-size: 4vw;
+   }
+    nav {
+        font-size: 3vw;
+   }
+    nav > ul {
+        width: 100vw;
+   }
+    .par {
+        font-size: 1em;
+   }
 }
