--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,6 @@ footer > a:hover{
 }
 nav {
     width: 100%;
-    height: 40px;
     background: #050505;
     color: white;
     text-transform: uppercase;
@@ -121,7 +120,7 @@ section > img {
     justify-content: space-between;
 }
 .pro > div {
-    width: 55%;
+    width: 50%;
     text-align: right;
 }
 .pro > div:nth-child(2) {
@@ -129,7 +128,7 @@ section > img {
     text-align: left;
 }
 .pro > div > a > img{
-    width: 510px;
+    width: 100%;
     filter: grayscale(100%);
     transition: filter 800ms cubic-bezier(.5,0,.5,1);
 }
@@ -158,12 +157,12 @@ section > img {
 }
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 1054px) {
+@media screen and (max-width: 1080px) {
     section {
         width: 90vw;
    }
     nav > ul {
-        width: 75vw;
+        width: 100vw;
    }
 }
 
@@ -178,18 +177,36 @@ section > img {
         font-size: 4vw;
    }
    h3{
-    font-size: 3vw;
+    font-size: 3.5vw;
    }
     nav {
-        font-size: 3vw;
+        font-size: 2.75vw;
    }
     nav > ul {
         width: 100vw;
    }
-    .par {
-        font-size: 1em;
+	nav > ul > li {
+		padding: 11px 5px;
+	}
+   .pro {
+	   flex-direction: column;
+   }
+   .pro > div {
+		width: 100%!important;
+		margin-bottom: 10px;
+		padding: 5px;
+		border: 1px solid black;
+	}
+	.pro > div:nth-child(3) {
+		margin-bottom: 0;
+	}
+	.project a {
+	font-size: small;
+	}
+	.par {
+        font-size: 0.85em;
    }
    .child{
-       font-size: 1em;
+       font-size: 0.85em;
    }
 }
